--- a/kubernetes/k8s-deployment.tmpl
+++ b/kubernetes/k8s-deployment.tmpl
@@ -56,6 +56,21 @@ spec:
                 configMapKeyRef:
                   name: bff-configmap
                   key: CUSTOMER_API_PATH
+            - name: "AUTH_API_PATH"
+              valueFrom:
+                configMapKeyRef:
+                  name: bff-configmap
+                  key: AUTH_API_PATH
+            - name: "HOURS_TO_EXPIRE_SESSION"
+              valueFrom:
+                configMapKeyRef:
+                  name: bff-configmap
+                  key: HOURS_TO_EXPIRE_SESSION
+            - name: "SECRET_KEY"
+              valueFrom:
+                secretKeyRef:
+                  name: bff-secrets
+                  key: SECRET_KEY
           ports:
             - containerPort: 3002
           imagePullPolicy: Always
